<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".CharActivity">

    <TextView
        android:id="@+id/CharTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_char" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_name" />

        <CheckBox
            android:id="@+id/checkCapital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capital" />

        <CheckBox
            android:id="@+id/checkPopulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/population" />

        <CheckBox
            android:id="@+id/checkLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <CheckBox
            android:id="@+id/checkWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather" />

        <CheckBox
            android:id="@+id/checkFlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flag" />
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="goToDifficulty"
        android:text="@string/continue_str" />

</LinearLayout>