<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".DifficultyActivity">

    <TextView
        android:id="@+id/question_typeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_question" />

    <RadioGroup
        android:id="@+id/radioQuestionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multi" />

        <RadioButton
            android:id="@+id/radioMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open" />
    </RadioGroup>

    <TextView
        android:id="@+id/diffilcultyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty" />

    <RadioGroup
        android:id="@+id/radioDiffilcultyGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/radioEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToQuiz"
        android:text="@string/start_quiz" />
</LinearLayout>