<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/homeTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:onClick="goToSearchActivity"/>

    <Button
        android:id="@+id/compareCountriesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compare_button" />

    <Button
        android:id="@+id/quizButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToRegion"
        android:text="@string/quiz_button" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_button" />
</LinearLayout>