<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_c" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autocomplete" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:onClick="goToCountryDetail"/>
</LinearLayout>